[package]
name = "calcit_http"
version = "0.1.2"
authors = ["jiyinyiyong <jiyinyiyong@gmail.com>"]
edition = "2021"

[lib]
name = "calcit_http"
path = "src/lib.rs"
crate-type = ["dylib"] # Creates dynamic lib


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cirru_edn = "0.6.3"
cirru_parser = "0.1.29"
tiny_http = "0.12.0"
querystring = "1.1.0"
