[package]
name = "calcit_http"
version = "0.3.2"
authors = ["jiyinyiyong <jiyinyiyong@gmail.com>"]
edition = "2024"

[lib]
name = "calcit_http"
path = "src/lib.rs"
crate-type = ["dylib"] # Creates dynamic lib


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cirru_edn = "0.7.7"
cirru_parser = "0.2.8"
tiny_http = "0.12.0"
querystring = "1.1.0"
